feat(ci): extract maven methods to shared lib
* Move Maven-related methods to the CamBPM shared library;
* Refactor method names to containe the shared lib prefix.

Related to CAM-12713, CAM-12866

--- a/.ci/daily/Jenkinsfile
+++ b/.ci/daily/Jenkinsfile
@@ -138,7 +138,7 @@ pipeline {
           steps {
             catchError(stageResult: 'FAILURE') {
               withMaven(jdk: 'jdk-8-latest', maven: 'maven-3.2-latest', mavenSettingsConfig: 'camunda-maven-settings', options: [artifactsPublisher(disabled: true), junitPublisher(disabled: true)]) {
-                runMaven(true, false, isQaStashEnabled('check-sql'), getMavenProfileDir('check-sql'), getMavenProfileCmd('check-sql') + cambpmGetDbProfiles('h2'))
+                runMaven(true, false, cambpmIsQaStashEnabled('check-sql'), cambpmGetMavenTargetDir('check-sql'), cambpmGetMavenTargetAndProfile('check-sql') + cambpmGetDbProfiles('h2'))
               }
             }
           }
@@ -163,7 +163,7 @@ pipeline {
           steps {
             catchError(stageResult: 'FAILURE') {
               withMaven(jdk: 'jdk-8-latest', maven: 'maven-3.2-latest', mavenSettingsConfig: 'camunda-maven-settings', options: [artifactsPublisher(disabled: true), junitPublisher(disabled: true)]) {
-                runMaven(true, false, isQaStashEnabled('upgrade-db'), getMavenProfileDir('upgrade-db'), getMavenProfileCmd('upgrade-db') + cambpmGetDbProfiles('h2'))
+                runMaven(true, false, cambpmIsQaStashEnabled('upgrade-db'), cambpmGetMavenTargetDir('upgrade-db'), cambpmGetMavenTargetAndProfile('upgrade-db') + cambpmGetDbProfiles('h2'))
               }
             }
           }
@@ -191,7 +191,7 @@ pipeline {
           steps {
             catchError(stageResult: 'FAILURE') {
               withMaven(jdk: 'jdk-8-latest', maven: 'maven-3.2-latest', mavenSettingsConfig: 'camunda-maven-settings', options: [artifactsPublisher(disabled: true), junitPublisher(disabled: true)]) {
-                runMaven(true, false, isQaStashEnabled('instance-migration'), getMavenProfileDir('instance-migration'), getMavenProfileCmd('instance-migration') + cambpmGetDbProfiles('h2'))
+                runMaven(true, false, cambpmIsQaStashEnabled('instance-migration'), cambpmGetMavenTargetDir('instance-migration'), cambpmGetMavenTargetAndProfile('instance-migration') + cambpmGetDbProfiles('h2'))
               }
             }
           }
@@ -219,7 +219,7 @@ pipeline {
           steps {
             catchError(stageResult: 'FAILURE') {
               withMaven(jdk: 'jdk-8-latest', maven: 'maven-3.2-latest', mavenSettingsConfig: 'camunda-maven-settings', options: [artifactsPublisher(disabled: true), junitPublisher(disabled: true)]) {
-                runMaven(true, false, isQaStashEnabled('old-engine'), getMavenProfileDir('old-engine'), getMavenProfileCmd('old-engine') + cambpmGetDbProfiles('h2'))
+                runMaven(true, false, cambpmIsQaStashEnabled('old-engine'), cambpmGetMavenTargetDir('old-engine'), cambpmGetMavenTargetAndProfile('old-engine') + cambpmGetDbProfiles('h2'))
               }
             }
           }
@@ -247,7 +247,7 @@ pipeline {
           steps {
             catchError(stageResult: 'FAILURE') {
               withMaven(jdk: 'jdk-8-latest', maven: 'maven-3.2-latest', mavenSettingsConfig: 'camunda-maven-settings', options: [artifactsPublisher(disabled: true), junitPublisher(disabled: true)]) {
-                runMaven(true, false, isQaStashEnabled('rolling-update'), getMavenProfileDir('rolling-update'), getMavenProfileCmd('rolling-update') + cambpmGetDbProfiles('h2'))
+                runMaven(true, false, cambpmIsQaStashEnabled('rolling-update'), cambpmGetMavenTargetDir('rolling-update'), cambpmGetMavenTargetAndProfile('rolling-update') + cambpmGetDbProfiles('h2'))
               }
             }
           }
@@ -273,7 +273,7 @@ pipeline {
           steps {
             catchError(stageResult: 'FAILURE') {
               withMaven(jdk: 'jdk-8-latest', maven: 'maven-3.2-latest', mavenSettingsConfig: 'camunda-maven-settings', options: [artifactsPublisher(disabled: true), junitPublisher(disabled: true)]) {
-                runMaven(true, false, isQaStashEnabled('large-data-tests'), getMavenProfileDir('large-data-tests'), getMavenProfileCmd('large-data-tests') + cambpmGetDbProfiles('h2'))
+                runMaven(true, false, cambpmIsQaStashEnabled('large-data-tests'), cambpmGetMavenTargetDir('large-data-tests'), cambpmGetMavenTargetAndProfile('large-data-tests') + cambpmGetDbProfiles('h2'))
               }
             }
           }
@@ -302,7 +302,7 @@ pipeline {
         }
         when {
           expression {
-            cambpmIsNotFailedStageType(failedStageTypes, env.PROFILE) && withLabels(getLabels(env.PROFILE)) && withDbLabels(env.DB)
+            cambpmIsNotFailedStageType(failedStageTypes, env.PROFILE) && withLabels(cambpmGetLabels(env.PROFILE, 'cockroachdb'))
           }
           beforeAgent true
         }
@@ -317,7 +317,7 @@ pipeline {
               echo("QA DB Test Stage: ${env.PROFILE}-${env.DB}")
               catchError(stageResult: 'FAILURE') {
                 withMaven(jdk: 'jdk-8-latest', maven: 'maven-3.2-latest', mavenSettingsConfig: 'camunda-maven-settings', options: [artifactsPublisher(disabled: true), junitPublisher(disabled: true)]) {
-                  runMaven(true, false, isQaStashEnabled(env.PROFILE), getMavenProfileDir(env.PROFILE), getMavenProfileCmd(env.PROFILE) + cambpmGetDbProfiles(DB) + " " + cambpmGetDbExtras(env.DB), true)
+                  runMaven(true, false, cambpmIsQaStashEnabled(env.PROFILE), cambpmGetMavenTargetDir(env.PROFILE), cambpmGetMavenTargetAndProfile(env.PROFILE) + cambpmGetDbProfiles(DB) + " " + cambpmGetDbExtras(env.DB), true)
                 }
               }
             }
@@ -398,7 +398,6 @@ void runMaven(boolean runtimeStash, boolean archivesStash, boolean qaStash, Stri
   }
 }
 
-
 boolean withLabels(List labels) {
   if (params.STANDALONE && env.BRANCH_NAME != cambpmDefaultBranch() && pullRequest.labels.contains('no-build')) {
     return false;
@@ -472,57 +471,4 @@ spec:
         medium: ""
       name: "workspace-volume"
   """
-}
-
-String resolveMavenProfileInfo(String profile) {
-  Map PROFILE_PATHS = [
-      'check-sql': [
-          directory: 'distro/sql-script/',
-          command: 'install -Pcheck-sql,',
-          qaStash: false,
-          labels: ['all-db','db2','mysql','oracle','mariadb','sqlserver','postgresql']],
-     'upgrade-db': [
-          directory: 'qa/test-db-upgrade/',
-          command: 'verify -Pupgrade-db,',
-          qaStash: false,
-          labels: ['all-db','db2','mysql','oracle','mariadb','sqlserver','postgresql']],
-      'instance-migration': [
-          directory: 'qa/test-db-instance-migration/',
-          command: 'verify -Pinstance-migration,',
-          qaStash: true,
-          labels: []],
-      'old-engine': [
-          directory: 'qa/',
-          command: 'verify -Pold-engine,',
-          qaStash: false,
-          labels: []],
-      'rolling-update': [
-          directory: 'qa/test-db-rolling-update/',
-          command: 'verify -Prolling-update,',
-          qaStash: true,
-          labels: []],
-      'large-data-tests': [
-          directory: 'qa/large-data-tests/',
-          command: 'verify -Plarge-data-tests,',
-          qaStash: false,
-          labels: []]
-  ]
-
-  return PROFILE_PATHS[profile]
-}
-
-String getMavenProfileCmd(String profile) {
-  return resolveMavenProfileInfo(profile).command
-}
-
-String getMavenProfileDir(String profile) {
-  return resolveMavenProfileInfo(profile).directory
-}
-
-boolean isQaStashEnabled(String profile) {
-  return resolveMavenProfileInfo(profile).qaStash
-}
-
-String[] getLabels(String profile) {
-  return resolveMavenProfileInfo(profile).labels
 }
