--- a/.ci/sidetrack/Jenkinsfile
+++ b/.ci/sidetrack/Jenkinsfile
@@ -64,7 +64,7 @@ pipeline {
     stage('Prepare') {
       when {
         expression {
-          cambpmWithLabels('standalone')
+          !cambpmWithLabels('standalone')
         }
         beforeAgent true
       }
