--- a/.ci/daily/Jenkinsfile
+++ b/.ci/daily/Jenkinsfile
@@ -1,6 +1,6 @@
 // https://github.com/camunda/jenkins-global-shared-library
 // https://github.com/camunda/cambpm-jenkins-shared-library
-@Library(['camunda-ci', 'cambpm-jenkins-shared-library@pipeline-extract-stashing']) _
+@Library(['camunda-ci', 'cambpm-jenkins-shared-library@pipeline-extract-artifact-logic']) _
 
 String getAgent(String dockerImage = 'gcr.io/ci-30-162810/centos:v0.4.6', Integer cpuLimit = 4){
   String mavenForkCount = cpuLimit;
@@ -105,8 +105,7 @@ pipeline {
         }
       }
       steps {
-        copyArtifacts(projectName: "cambpm-ce/cambpm-main/${env.BRANCH_NAME}", fingerprintArtifacts: true, selector: buildParameter('copyArtifactSelector'), optional: true)
-        sh 'ls -al'
+        cambpmCopyArtifacts("cambpm-ce/cambpm-main/${env.BRANCH_NAME}")
         cambpmStash("platform-stash-runtime",
                     ".m2/org/camunda/**/*-SNAPSHOT/**",
                     "**/qa/**,**/*qa*/**,**/*.zip,**/*.tar.gz")
